--- a/components/free-text-question.html
+++ b/components/free-text-question.html
@@ -61,7 +61,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="gate.html" />
+    <link rel="next" href="free-text-survey.html" />
     
     
     <link rel="prev" href="feedback.html" />
@@ -301,7 +301,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="draggable-list.html">
+        <li class="chapter " data-level="1.4.3" data-path="data.table.md">
+            
+                <span>
+            
+                    
+                    Data Table
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.4" data-path="draggable-list.html">
             
                 <a href="draggable-list.html">
             
@@ -314,7 +327,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="expire.html">
+        <li class="chapter " data-level="1.4.5" data-path="expire.html">
             
                 <a href="expire.html">
             
@@ -327,12 +340,12 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="feedback.html">
+        <li class="chapter " data-level="1.4.6" data-path="feedback.html">
             
                 <a href="feedback.html">
             
                     
-                    Feedback Buttons
+                    Feedback
             
                 </a>
             
@@ -340,7 +353,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.6" data-path="free-text-question.html">
+        <li class="chapter active" data-level="1.4.7" data-path="free-text-question.html">
             
                 <a href="free-text-question.html">
             
@@ -353,7 +366,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="gate.html">
+        <li class="chapter " data-level="1.4.8" data-path="free-text-survey.html">
+            
+                <a href="free-text-survey.html">
+            
+                    
+                    Free Text Survey
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.9" data-path="gate.html">
             
                 <a href="gate.html">
             
@@ -366,7 +392,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.8" data-path="grid.html">
+        <li class="chapter " data-level="1.4.10" data-path="grid.html">
             
                 <a href="grid.html">
             
@@ -379,7 +405,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9" data-path="js-shell.html">
+        <li class="chapter " data-level="1.4.11" data-path="js-shell.html">
             
                 <a href="js-shell.html">
             
@@ -392,7 +418,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10" data-path="lesson-submit.html">
+        <li class="chapter " data-level="1.4.12" data-path="lesson-submit.html">
             
                 <a href="lesson-submit.html">
             
@@ -405,7 +431,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="match-list-question.html">
+        <li class="chapter " data-level="1.4.13" data-path="markdown-editor.html">
+            
+                <a href="markdown-editor.html">
+            
+                    
+                    Markdown Editor
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.14" data-path="match-list-question.html">
             
                 <a href="match-list-question.html">
             
@@ -418,7 +457,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12" data-path="multiple-choice-question.html">
+        <li class="chapter " data-level="1.4.15" data-path="multiple-choice-question.html">
             
                 <a href="multiple-choice-question.html">
             
@@ -431,7 +470,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13" data-path="news.html">
+        <li class="chapter " data-level="1.4.16" data-path="news.html">
             
                 <a href="news.html">
             
@@ -444,7 +483,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="pages.html">
+        <li class="chapter " data-level="1.4.17" data-path="number-question.html">
+            
+                <a href="number-question.html">
+            
+                    
+                    Number Question
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.18" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -457,7 +509,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15" data-path="plots.html">
+        <li class="chapter " data-level="1.4.19" data-path="playground.html">
+            
+                <a href="playground.html">
+            
+                    
+                    Playground
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.20" data-path="plots.html">
             
                 <a href="plots.html">
             
@@ -471,7 +536,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.15.1" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.20.1" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -484,7 +549,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.2" data-path="r-plot.html">
+        <li class="chapter " data-level="1.4.20.2" data-path="r-plot.html">
             
                 <a href="r-plot.html">
             
@@ -502,7 +567,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16" data-path="proportions-survey.html">
+        <li class="chapter " data-level="1.4.21" data-path="proportions-input.md">
+            
+                <span>
+            
+                    
+                    Proportions Input
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.22" data-path="proportions-survey.html">
             
                 <a href="proportions-survey.html">
             
@@ -515,7 +593,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.17" data-path="r-help.html">
+        <li class="chapter " data-level="1.4.23" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -528,7 +606,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="r-output.html">
+        <li class="chapter " data-level="1.4.24" data-path="r-output.html">
             
                 <a href="r-output.html">
             
@@ -541,7 +619,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="r-shell.html">
+        <li class="chapter " data-level="1.4.25" data-path="r-plot.html">
+            
+                <a href="r-plot.html">
+            
+                    
+                    R Plot
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.26" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -554,7 +645,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="r-table.html">
+        <li class="chapter " data-level="1.4.27" data-path="r-table.html">
             
                 <a href="r-table.html">
             
@@ -567,7 +658,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="slider.html">
+        <li class="chapter " data-level="1.4.28" data-path="recorder.html">
+            
+                <a href="recorder.html">
+            
+                    
+                    Recorder
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.29" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -580,7 +684,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.22" data-path="switch.html">
+        <li class="chapter " data-level="1.4.30" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -593,7 +697,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.23" data-path="text-area.html">
+        <li class="chapter " data-level="1.4.31" data-path="text-area.html">
             
                 <a href="text-area.html">
             
@@ -606,7 +710,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.24" data-path="text.html">
+        <li class="chapter " data-level="1.4.32" data-path="text.html">
             
                 <a href="text.html">
             
@@ -619,7 +723,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.25" data-path="timer.html">
+        <li class="chapter " data-level="1.4.33" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -632,7 +736,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.26" data-path="latex.html">
+        <li class="chapter " data-level="1.4.34" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -645,7 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.27" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.35" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -658,7 +762,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.28" data-path="wikipedia.html">
+        <li class="chapter " data-level="1.4.36" data-path="voice-input.html">
+            
+                <a href="voice-input.html">
+            
+                    
+                    Voice Input
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.37" data-path="wikipedia.html">
             
                 <a href="wikipedia.html">
             
@@ -782,12 +899,12 @@
 
             
                 
-                <a href="feedback.html" class="navigation navigation-prev " aria-label="Previous page: Feedback Buttons">
+                <a href="feedback.html" class="navigation navigation-prev " aria-label="Previous page: Feedback">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="gate.html" class="navigation navigation-next " aria-label="Next page: Gate">
+                <a href="free-text-survey.html" class="navigation navigation-next " aria-label="Next page: Free Text Survey">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -798,7 +915,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Free Text Question","level":"1.4.6","depth":2,"next":{"title":"Gate","level":"1.4.7","depth":2,"path":"components/gate.md","ref":"components/gate.md","articles":[]},"previous":{"title":"Feedback Buttons","level":"1.4.5","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-question.md","mtime":"2017-12-27T18:34:14.045Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T10:42:34.091Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Free Text Question","level":"1.4.7","depth":2,"next":{"title":"Free Text Survey","level":"1.4.8","depth":2,"path":"components/free-text-survey.md","ref":"components/free-text-survey.md","articles":[]},"previous":{"title":"Feedback","level":"1.4.6","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-question.md","mtime":"2017-12-27T18:34:14.045Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T10:43:05.957Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
