--- a/components/data-table.html
+++ b/components/data-table.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Text Area · ISLE Editor Documentation</title>
+        <title>Data Table · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="text.html" />
+    <link rel="next" href="draggable-list.html" />
     
     
-    <link rel="prev" href="switch.html" />
+    <link rel="prev" href="data-explorer.md" />
     
 
     </head>
@@ -230,7 +230,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="data-table.html">
+        <li class="chapter active" data-level="1.4.4" data-path="data-table.html">
             
                 <a href="data-table.html">
             
@@ -819,7 +819,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.24" data-path="text-area.html">
+        <li class="chapter " data-level="1.4.24" data-path="text-area.html">
             
                 <a href="text-area.html">
             
@@ -945,7 +945,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Text Area</a>
+        <a href=".." >Data Table</a>
     </h1>
 </div>
 
@@ -960,22 +960,21 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="text-area">Text Area</h1>
-<p>A text area component. Used as a stand-alone component, changes should be handled via the <code>onChange</code> attribute. </p>
+                                <h1 id="data-table">Data Table</h1>
+<p>A number question component. Usually, this will be used as part of an <a href="dashboard.html">ISLE dashboard</a>, but it can also be used standalone. In this case, you want to handle changes via the <code>onChange</code> attribute. </p>
 <h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>TextArea
-    legend<span class="token operator">=</span><span class="token string">&quot;Please enter a few sentences&quot;</span>
-    placeholder<span class="token operator">=</span><span class="token string">&quot;Enter text&quot;</span>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>DataTable
+    question<span class="token operator">=</span><span class="token string">&quot;What is the number PI - three digits after the period&quot;</span>
+    solution<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">3.142</span><span class="token punctuation">}</span>
 <span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
-<p><a href="https://isle.heinz.cmu.edu/components/text-area/" target="_blank">Open interactive preview</a></p>
+<p><a href="https://isle.heinz.cmu.edu/components/number-question/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>legend</strong>: <code>string</code> to be displayed as the title of te component. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>onChange</strong>: Callback <code>function</code> invoked after each change of the text value. Default: <code>null</code>.</li>
-<li><strong>placeholder</strong>: </li>
-<li><strong>resize</strong>: <code>boolean</code> indicating whether the element should be resizable. Default: <code>false</code>.</li>
-<li><strong>rows</strong>: <code>number</code> of rows. Default: <code>5</code>.</li>
+<li><strong>data</strong>: <code>object</code> holding a multitude of arrays.  </li>
+<li><strong>showRemove</strong>: <code>boolean</code> allowing to remove data entries individually. Default: <code>false</code></li>
+<li><strong>onClickRemove</strong>: callback <code>function</code> which is triggered after the an entry has been removed. It returns the complete data-set, augmented with a  <code>removed</code> property allowing to differentiate between the items. </li>
+<li><strong>style</strong>: <code>object</code> for styling the tables: <code>&apos;&apos;</code>.</li>
 </ul>
 
                                 
@@ -1004,12 +1003,12 @@
 
             
                 
-                <a href="switch.html" class="navigation navigation-prev " aria-label="Previous page: Switch">
+                <a href="data-explorer.md" class="navigation navigation-prev " aria-label="Previous page: Data Explorer">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="text.html" class="navigation navigation-next " aria-label="Next page: Text">
+                <a href="draggable-list.html" class="navigation navigation-next " aria-label="Next page: Draggable List">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1020,7 +1019,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Text Area","level":"1.4.24","depth":2,"next":{"title":"Text","level":"1.4.25","depth":2,"path":"components/text.md","ref":"components/text.md","articles":[]},"previous":{"title":"Switch","level":"1.4.23","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text-area.md","mtime":"2017-12-29T14:07:43.350Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T10:56:25.022Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Data Table","level":"1.4.4","depth":2,"next":{"title":"Draggable List","level":"1.4.5","depth":2,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},"previous":{"title":"Data Explorer","level":"1.4.3","depth":2,"path":"components/data-explorer.md","ref":"components/data-explorer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/data-table.md","mtime":"2017-12-29T20:02:06.990Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T10:56:25.022Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
