--- a/components/voice-input.html
+++ b/components/voice-input.html
@@ -243,7 +243,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="draggable-list.html">
+        <li class="chapter " data-level="1.4.5" data-path="../chapters/display-components.md">
+            
+                <span>
+            
+                    
+                    Display Components
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.6" data-path="draggable-list.html">
             
                 <a href="draggable-list.html">
             
@@ -256,7 +269,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.6" data-path="expire.html">
+        <li class="chapter " data-level="1.4.7" data-path="expire.html">
             
                 <a href="expire.html">
             
@@ -269,7 +282,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="feedback.html">
+        <li class="chapter " data-level="1.4.8" data-path="feedback.html">
             
                 <a href="feedback.html">
             
@@ -282,7 +295,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.8" data-path="gate.html">
+        <li class="chapter " data-level="1.4.9" data-path="gate.html">
             
                 <a href="gate.html">
             
@@ -295,7 +308,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9" data-path="grid.html">
+        <li class="chapter " data-level="1.4.10" data-path="grid.html">
             
                 <a href="grid.html">
             
@@ -308,12 +321,12 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10" data-path="../group-interactions.md">
+        <li class="chapter " data-level="1.4.11" data-path="../chapters/group-interaction.html">
             
-                <span>
+                <a href="../chapters/group-interaction.html">
             
                     
-                    Group Interactions
+                    Group Interaction
             
                 </a>
             
@@ -322,7 +335,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.10.1" data-path="free-text-survey.html">
+        <li class="chapter " data-level="1.4.11.1" data-path="free-text-survey.html">
             
                 <a href="free-text-survey.html">
             
@@ -335,7 +348,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10.2" data-path="number-survey.md">
+        <li class="chapter " data-level="1.4.11.2" data-path="number-survey.md">
             
                 <span>
             
@@ -348,7 +361,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10.3" data-path="proportions-survey.html">
+        <li class="chapter " data-level="1.4.11.3" data-path="proportions-survey.html">
             
                 <a href="proportions-survey.html">
             
@@ -361,7 +374,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10.4" data-path="survey-generator.md">
+        <li class="chapter " data-level="1.4.11.4" data-path="survey-generator.md">
             
                 <span>
             
@@ -379,12 +392,12 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="inputs.md">
+        <li class="chapter " data-level="1.4.12" data-path="../chapters/input.html">
             
-                <span>
+                <a href="../chapters/input.html">
             
                     
-                    Inputs
+                    Input
             
                 </a>
             
@@ -393,7 +406,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.11.1" data-path="checkbox-input.html">
+        <li class="chapter " data-level="1.4.12.1" data-path="checkbox-input.html">
             
                 <a href="checkbox-input.html">
             
@@ -406,7 +419,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.2" data-path="number-input.html">
+        <li class="chapter " data-level="1.4.12.2" data-path="number-input.html">
             
                 <a href="number-input.html">
             
@@ -419,7 +432,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.3" data-path="proportions-input.md">
+        <li class="chapter " data-level="1.4.12.3" data-path="proportions-input.md">
             
                 <span>
             
@@ -432,7 +445,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="select-input.html">
+        <li class="chapter " data-level="1.4.12.4" data-path="select-input.html">
             
                 <a href="select-input.html">
             
@@ -445,7 +458,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.5" data-path="slider-input.html">
+        <li class="chapter " data-level="1.4.12.5" data-path="slider-input.html">
             
                 <a href="slider-input.html">
             
@@ -458,7 +471,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="text-input.html">
+        <li class="chapter " data-level="1.4.12.6" data-path="text-input.html">
             
                 <a href="text-input.html">
             
@@ -471,7 +484,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.11.7" data-path="voice-input.html">
+        <li class="chapter active" data-level="1.4.12.7" data-path="voice-input.html">
             
                 <a href="voice-input.html">
             
@@ -489,7 +502,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12" data-path="js-shell.html">
+        <li class="chapter " data-level="1.4.13" data-path="js-shell.html">
             
                 <a href="js-shell.html">
             
@@ -502,7 +515,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13" data-path="lesson-submit.html">
+        <li class="chapter " data-level="1.4.14" data-path="lesson-submit.html">
             
                 <a href="lesson-submit.html">
             
@@ -515,25 +528,12 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="markdown-editor.html">
+        <li class="chapter " data-level="1.4.15" data-path="markdown-editor.html">
             
                 <a href="markdown-editor.html">
             
                     
                     Markdown Editor
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.15" data-path="news.html">
-            
-                <a href="news.html">
-            
-                    
-                    News
             
                 </a>
             
@@ -567,12 +567,12 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="plots.html">
+        <li class="chapter " data-level="1.4.18" data-path="../chapters/plot.html">
             
-                <a href="plots.html">
+                <a href="../chapters/plot.html">
             
                     
-                    Plots
+                    Plot
             
                 </a>
             
@@ -625,12 +625,12 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="questions.md">
+        <li class="chapter " data-level="1.4.19" data-path="../chapters/question.html">
             
-                <span>
+                <a href="../chapters/question.html">
             
                     
-                    Questions
+                    Question
             
                 </a>
             
@@ -696,9 +696,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="r.md">
+        <li class="chapter " data-level="1.4.20" data-path="../chapters/r.html">
             
-                <span>
+                <a href="../chapters/r.html">
             
                     
                     R
@@ -884,7 +884,34 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.29" data-path="wikipedia.html">
+        <li class="chapter " data-level="1.4.29" data-path="../chapters/web-service.html">
+            
+                <a href="../chapters/web-service.html">
+            
+                    
+                    Web Service
+            
+                </a>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.4.29.1" data-path="news.html">
+            
+                <a href="news.html">
+            
+                    
+                    News
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.29.2" data-path="wikipedia.html">
             
                 <a href="wikipedia.html">
             
@@ -894,6 +921,11 @@
                 </a>
             
 
+            
+        </li>
+    
+
+            </ul>
             
         </li>
     
@@ -1020,7 +1052,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Voice Input","level":"1.4.11.7","depth":3,"next":{"title":"JSShell","level":"1.4.12","depth":2,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},"previous":{"title":"Text Input","level":"1.4.11.6","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/voice-input.md","mtime":"2017-12-27T18:30:56.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T10:56:25.022Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Voice Input","level":"1.4.12.7","depth":3,"next":{"title":"JSShell","level":"1.4.13","depth":2,"path":"components/js-shell.md","ref":"components/js-shell.md","articles":[]},"previous":{"title":"Text Input","level":"1.4.12.6","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/voice-input.md","mtime":"2017-12-27T18:30:56.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T11:07:02.142Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
