--- a/components/js-shell.html
+++ b/components/js-shell.html
@@ -244,9 +244,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.4.1" data-path="draggable-grid.md">
+        <li class="chapter " data-level="1.4.4.1" data-path="draggable-grid.html">
             
-                <span>
+                <a href="draggable-grid.html">
             
                     
                     Draggable Grid
@@ -477,9 +477,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.10.1" data-path="clock.md">
+        <li class="chapter " data-level="1.4.10.1" data-path="clock.html">
             
-                <span>
+                <a href="clock.html">
             
                     
                     Clock
@@ -904,9 +904,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.4" data-path="plotly.md">
+        <li class="chapter " data-level="1.4.15.4" data-path="plotly.html">
             
-                <span>
+                <a href="plotly.html">
             
                     
                     Plotly
@@ -930,9 +930,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15.6" data-path="victory.md">
+        <li class="chapter " data-level="1.4.15.6" data-path="victory.html">
             
-                <span>
+                <a href="victory.html">
             
                     
                     Victory
@@ -1229,6 +1229,335 @@
             
 
             
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.5.1" >
+            
+                <span>
+            
+                    
+                    Central Limit Theorem
+            
+                </span>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.5.1.1" data-path="learn-clt-continuous.md">
+            
+                <span>
+            
+                    
+                    Continuous
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.1.2" data-path="learn-clt-discrete.md">
+            
+                <span>
+            
+                    
+                    Discrete
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.1.3" data-path="learn-clt-sample.md">
+            
+                <span>
+            
+                    
+                    Sample
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.2" data-path="learn-conditional-probability.md">
+            
+                <span>
+            
+                    
+                    Conditional Probability
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.3" >
+            
+                <span>
+            
+                    
+                    Confidence Intervals
+            
+                </span>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.5.3.1" data-path="learn-confidence-coverage-binomial.md">
+            
+                <span>
+            
+                    
+                    Binomial
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.3.2" data-path="learn-confidence-coverage-normal.md">
+            
+                <span>
+            
+                    
+                    Normal
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.4" data-path="learn-cross-validation.md">
+            
+                <span>
+            
+                    
+                    Cross-Validation
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.5" data-path="learn-dice-throwing.md">
+            
+                <span>
+            
+                    
+                    Dice Throwing
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.6" >
+            
+                <span>
+            
+                    
+                    Distribution
+            
+                </span>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.5.6.1" data-path="learn-distribution-exponential.md">
+            
+                <span>
+            
+                    
+                    Exponential
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.6.2" data-path="learn-distribution-normal.md">
+            
+                <span>
+            
+                    
+                    Normal
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.6.3" data-path="learn-distribution-t.md">
+            
+                <span>
+            
+                    
+                    T
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.6.4" data-path="learn-distribution-uniform.md">
+            
+                <span>
+            
+                    
+                    Uniform
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.7" >
+            
+                <span>
+            
+                    
+                    Hypothesis Testing
+            
+                </span>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.5.7.1" data-path="learn-hypothesis-testing-mean.md">
+            
+                <span>
+            
+                    
+                    Mean
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.7.2" data-path="learn-hypothesis-testing-proportion.md">
+            
+                <span>
+            
+                    
+                    Proportion
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.8" data-path="learn-image-pixel-picker.md">
+            
+                <span>
+            
+                    
+                    Image Pixel Picker
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.9" data-path="learn-mean-vs-median.md">
+            
+                <span>
+            
+                    
+                    Mean vs. Median
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.10" data-path="learn-standardize.md">
+            
+                <span>
+            
+                    
+                    Standardize
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.11" data-path="learn-venn-diagram-builder.md">
+            
+                <span>
+            
+                    
+                    Venn Diagram Builder
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.5.12" data-path="learn-word-venn-diagram.md">
+            
+                <span>
+            
+                    
+                    Word Venn Diagram
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
         </li>
     
         <li class="chapter " data-level="1.6" data-path="../internal-components.html">
@@ -1408,7 +1737,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"JSShell","level":"1.4.10.4","depth":3,"next":{"title":"Markdown Editor","level":"1.4.10.5","depth":3,"path":"components/markdown-editor.md","ref":"components/markdown-editor.md","articles":[]},"previous":{"title":"Date Range Picker","level":"1.4.10.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/js-shell.md","mtime":"2017-12-28T11:49:43.606Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T11:50:29.039Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"JSShell","level":"1.4.10.4","depth":3,"next":{"title":"Markdown Editor","level":"1.4.10.5","depth":3,"path":"components/markdown-editor.md","ref":"components/markdown-editor.md","articles":[]},"previous":{"title":"Date Range Picker","level":"1.4.10.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/js-shell.md","mtime":"2017-12-28T11:49:43.606Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:15:15.922Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
