--- a/components/draggable-grid.html
+++ b/components/draggable-grid.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Slider · ISLE Editor Documentation</title>
+        <title>Draggable Grid · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="switch.html" />
+    <link rel="next" href="draggable-list.html" />
     
     
-    <link rel="prev" href="pages.html" />
+    <link rel="prev" href="../chapters/display.html" />
     
 
     </head>
@@ -244,7 +244,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.4.1" data-path="draggable-grid.html">
+        <li class="chapter active" data-level="1.4.4.1" data-path="draggable-grid.html">
             
                 <a href="draggable-grid.html">
             
@@ -309,7 +309,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.4.6" data-path="slider.html">
+        <li class="chapter " data-level="1.4.4.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -1661,7 +1661,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Slider</a>
+        <a href=".." >Draggable Grid</a>
     </h1>
 </div>
 
@@ -1676,24 +1676,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="slider">Slider</h1>
-<p>A component which displays its children in a slideshow or carousel. </p>
-<h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Slider title<span class="token operator">=</span><span class="token string">&quot;Questions to explore:&quot;</span> <span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>p<span class="token operator">&gt;</span>Try generating <span class="token keyword">new</span> <span class="token class-name">samples</span> <span class="token keyword">of</span> the Normal data<span class="token punctuation">.</span> You<span class="token string">&apos;ll notice that the points don&apos;</span>t always lie exactly on the line<span class="token punctuation">.</span> This is typical variation<span class="token punctuation">.</span> As you generate more random realizations <span class="token keyword">of</span> <span class="token keyword">this</span> plot you&apos;ll <span class="token keyword">get</span> better calibrated to the kind <span class="token keyword">of</span> deviation you can expect to see <span class="token keyword">from</span> <span class="token keyword">this</span> large a sample <span class="token keyword">of</span> Normal data<span class="token punctuation">.</span><span class="token operator">&lt;</span><span class="token operator">/</span>p<span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>p<span class="token operator">&gt;</span>How <span class="token keyword">do</span> the normal qq plots change <span class="token keyword">as</span> you vary the df parameter <span class="token keyword">for</span> the t<span class="token operator">-</span>distributed data<span class="token operator">?</span><span class="token operator">&lt;</span><span class="token operator">/</span>p<span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>p<span class="token operator">&gt;</span>Can you tell just by looking at the t<span class="token punctuation">.</span>data histograms that the data aren&apos;t normally distributed<span class="token operator">?</span> Is it easier to tell <span class="token keyword">from</span> the QQ plots<span class="token operator">?</span><span class="token operator">&lt;</span><span class="token operator">/</span>p<span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>p<span class="token operator">&gt;</span>How <span class="token keyword">do</span> the normal qq plots change <span class="token keyword">as</span> you vary the shape parameter <span class="token keyword">in</span> the gamma<span class="token operator">-</span>distributed data<span class="token operator">?</span><span class="token operator">&lt;</span><span class="token operator">/</span>p<span class="token operator">&gt;</span>
-<span class="token operator">&lt;</span><span class="token operator">/</span>Slider<span class="token operator">&gt;</span>
-</code></pre>
-<p><a href="https://isle.heinz.cmu.edu/components/slider/" target="_blank">Open interactive preview</a></p>
-<h4 id="options">Options:</h4>
-<ul>
-<li><strong>fade</strong>: <code>boolean</code> indicating whether fading is used for transitioning between the slides. Default: <code>false</code>.</li>
-<li><strong>infinite</strong>: <code>boolean</code> indicating whether the slideshow wraps around it&apos;s contents. Default: <code>false</code>.</li>
-<li><strong>interval</strong>: sets the interval of the automatic change</li>
-<li><strong>title</strong>: <code>string</code> with a title for the slideshow / carousel to be displayed at its top. Default: <code>&apos;&apos;</code>.</li>
-</ul>
+                                <h1 id="draggable-grid">Draggable Grid</h1>
 
                                 
                                 </section>
@@ -1721,12 +1704,12 @@
 
             
                 
-                <a href="pages.html" class="navigation navigation-prev " aria-label="Previous page: Pages">
+                <a href="../chapters/display.html" class="navigation navigation-prev " aria-label="Previous page: Display">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="switch.html" class="navigation navigation-next " aria-label="Next page: Switch">
+                <a href="draggable-list.html" class="navigation navigation-next " aria-label="Next page: Draggable List">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1737,7 +1720,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Slider","level":"1.4.4.6","depth":3,"next":{"title":"Switch","level":"1.4.4.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"Pages","level":"1.4.4.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/slider.md","mtime":"2017-12-29T20:02:07.026Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:15:15.922Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Draggable Grid","level":"1.4.4.1","depth":3,"next":{"title":"Draggable List","level":"1.4.4.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},"previous":{"title":"Display","level":"1.4.4","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable Grid","level":"1.4.4.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},{"title":"Draggable List","level":"1.4.4.2","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Enlargeable Grid","level":"1.4.4.3","depth":3,"path":"components/enleargeable-grid.md","ref":"components/enleargeable-grid.md","articles":[]},{"title":"Grid","level":"1.4.4.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.4.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Slider","level":"1.4.4.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.4.7","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/draggable-grid.md","mtime":"2017-12-30T11:56:38.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:15:15.922Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
